--- a/src/scss/_begin.scss
+++ b/src/scss/_begin.scss
@@ -1,6 +1,10 @@
 .begin {
-	padding-top: 90px;
-	padding-bottom: 25px;
+	padding-top: 30px;
+	padding-bottom: 10px;
+	@media (min-width: $breakpoint768) {
+		padding-top: 90px;
+		padding-bottom: 25px;
+	}
 	@media (min-width: $breakpoint1920) {
 		padding-top: 150px;
 		padding-bottom: 70px;
@@ -23,7 +27,10 @@
 
 	&__title {
 		margin-right: 0;
-		margin-bottom: 40px;
+		margin-bottom: 30px;
+		@media (min-width: $breakpoint768) {
+			margin-bottom: 40px;
+		}
 		@media (min-width: $breakpoint1310) {
 			margin-right: -30px;
 		}
@@ -36,9 +43,13 @@
 	&__list {
 		color: $white-color;
 		font-weight: 700;
-		margin-bottom: 40px;
-		font-size: 16px;
+		margin-bottom: 25px;
+		font-size: 14px;
 		line-height: 19px;
+		@media (min-width: $breakpoint768) {
+			font-size: 16px;
+			margin-bottom: 40px;
+		}
 		@media (min-width: $breakpoint1920) {
 			font-size: 18px;
 			line-height: 24px;
@@ -56,8 +67,19 @@
 		&:last-child {
 			margin-bottom: 0;
 		}
+		svg {
+			width: 22px;
+			height: 20px;
+			@media (min-width: $breakpoint768) {
+				width: 34px;
+				height: 31px;
+			}
+		}
 		p {
-			margin-left: 20px;
+			margin-left: 12px;
+			@media (min-width: $breakpoint768) {
+				margin-left: 20px;
+			}
 		}
 	}
 
@@ -75,10 +97,14 @@
 	}
 
 	&__image {
-		max-width: 700px;
-		margin-left: auto;
-		margin-right: -85px;
-		margin-top: -100px;
+		max-width: 330px;
+		margin-right: -35px;
+		@media (min-width: $breakpoint768) {
+			max-width: 700px;
+			margin-left: auto;
+			margin-right: -85px;
+			margin-top: -100px;
+		}
 		@media (min-width: $breakpoint1310) {
 			max-width: 1005px;
 			margin-left: 0;
