--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -163,9 +163,6 @@ body {
 	@media (min-width: $breakpoint1310) {
 		padding: 10px 28px;
 	}
-	// @media (min-width: $breakpoint1920) {
-	// 	padding: 17px 55px;
-	// }
 	&::before {
 		content: "";
 		position: absolute;
@@ -181,28 +178,45 @@ body {
 		mask-composite: exclude;
 	}
 	&__icon {
-		margin-right: 17px;
+		margin-right: 11px;
 		display: flex;
 		align-items: center;
+		@media (min-width: $breakpoint768) {
+			margin-right: 17px;
+		}
 		svg {
-			width: 25px;
-			height: 25px;
+			width: 14px;
+			height: 14px;
+			@media (min-width: $breakpoint768) {
+				width: 25px;
+				height: 25px;
+			}
 		}
 	}
 
 	&__name {
 		color: $white-color;
 		span {
-			display: block;
-			font-size: 9px;
-			line-height: 11px;
-			font-weight: 500;
+			display: inline-block;
+			font-size: 12px;
+			line-height: 14px;
+			font-weight: 700;
+			@media (min-width: $breakpoint768) {
+				display: block;
+				font-size: 9px;
+				line-height: 11px;
+				font-weight: 500;
+			}
 		}
 
 		span + span {
-			font-size: 16px;
-			line-height: 19px;
+			font-size: 12px;
+			line-height: 14px;
 			font-weight: 700;
+			@media (min-width: $breakpoint768) {
+				font-size: 16px;
+				line-height: 19px;
+			}
 		}
 	}
 }
