--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -92,7 +92,7 @@
 		color: $white-color;
 		font-family: Amiko;
 		font-weight: 700;
-		background: linear-gradient(90deg, #2095D9 0%, #5C35EE 100%);
+		background: linear-gradient(90deg, rgba(32, 149, 217, 1) 0%, rgba(92, 53, 238, 1) 100%);
 		border-radius: 5px;
 		font-size: 14px;
 		line-height: 19px;
