--- a/src/scss/_unlimited.scss
+++ b/src/scss/_unlimited.scss
@@ -590,5 +590,49 @@
 		}
 }
 
+//? animation on unlimited__footer-list
+.unlimited__footer-list li {
+	opacity: 0;
+	transition: all .3s;
+}
 
+.unlimited__footer-list.fade-effect-off li:nth-child(1) {
+	animation: .4s ease 0s normal forwards 1 fadein;
+}
+.unlimited__footer-list.fade-effect-off li:nth-child(2) {
+	animation: .5s ease 0s normal forwards 1 fadein;
+}
+.unlimited__footer-list.fade-effect-off li:nth-child(3) {
+	animation: .6s ease 0s normal forwards 1 fadein;
+}
+.unlimited__footer-list.fade-effect-off li:nth-child(4) {
+	animation: .7s ease 0s normal forwards 1 fadein;
+}
 
+@keyframes fadein{
+	0% { opacity:0; }
+	50% { opacity:0; }
+	100% { opacity:1; }
+}
+
+.unlimited__footer-list li:nth-child(1) {
+
+	// transition: all .3s;
+	// transition-delay: .3s;
+	// transition-property: all;
+}
+.unlimited__footer-list li:nth-child(2) {
+	// transition: all .5s;
+	transition-delay: .4s;
+	transition-property: all;
+}
+.unlimited__footer-list li:nth-child(3) {
+	// transition: all .7s;
+	transition-delay: .5s;
+	transition-property: all;
+}
+.unlimited__footer-list li:nth-child(4) {
+	// transition: all .9s;
+	transition-delay: .6s;
+	transition-property: all;
+}
