--- a/src/scss/_unlimited.scss
+++ b/src/scss/_unlimited.scss
@@ -550,7 +550,7 @@
 				width: 100%;
 				margin-right: 0;
 			}
-			a {
+			a, p {
 				display: block;
 				text-align: center;
 				font-size: 12px;
@@ -579,6 +579,9 @@
 			&--custom-link {
 				padding: 20px 44px;
 				line-height: 20px;
+				&::before {
+					opacity: 0.4;
+				}
 				@media (min-width: $breakpoint768) {
 					padding: 10px 18px;
 					line-height: 18px;
@@ -615,24 +618,24 @@
 	100% { opacity:1; }
 }
 
-.unlimited__footer-list li:nth-child(1) {
+// .unlimited__footer-list li:nth-child(1) {
 
-	// transition: all .3s;
-	// transition-delay: .3s;
-	// transition-property: all;
-}
-.unlimited__footer-list li:nth-child(2) {
-	// transition: all .5s;
-	transition-delay: .4s;
-	transition-property: all;
-}
-.unlimited__footer-list li:nth-child(3) {
-	// transition: all .7s;
-	transition-delay: .5s;
-	transition-property: all;
-}
-.unlimited__footer-list li:nth-child(4) {
-	// transition: all .9s;
-	transition-delay: .6s;
-	transition-property: all;
-}
+// 	// transition: all .3s;
+// 	// transition-delay: .3s;
+// 	// transition-property: all;
+// }
+// .unlimited__footer-list li:nth-child(2) {
+// 	// transition: all .5s;
+// 	transition-delay: .4s;
+// 	transition-property: all;
+// }
+// .unlimited__footer-list li:nth-child(3) {
+// 	// transition: all .7s;
+// 	transition-delay: .5s;
+// 	transition-property: all;
+// }
+// .unlimited__footer-list li:nth-child(4) {
+// 	// transition: all .9s;
+// 	transition-delay: .6s;
+// 	transition-property: all;
+// }
