fix css files and adding download page skeleton

--- a/src/scss/_platform.scss
+++ b/src/scss/_platform.scss
@@ -177,6 +177,7 @@
 		margin-right: 0;
 		@media (min-width: $breakpoint768) {
 			margin-right: -165px;
+			margin-top: -100px;
 		}
 		@media (min-width: $breakpoint1310) {
 			margin-top: 0;
