--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -155,36 +155,46 @@ body {
 
 .basic-button {
 	background: linear-gradient(90deg, #F5263C 0%, #6A129F 100%);
+	width: 100%;
+	text-align: center;
 	border-radius: 5px;
 	display: inline-block;
 	color: $white-color;
 	font-weight: 900;
 	font-size: 16px;
 	line-height: 19px;
-	padding: 15px 52px;
+	padding: 16px 20px 15px;
+	max-width: 190px;
 	cursor: pointer;
 	text-transform: uppercase;
-	@media (min-width: $breakpoint768) {
-		padding: 15px 49px;
-	}
-	@media (min-width: $breakpoint1310) {
-		padding: 15px 52px;
-	}
 	@media (min-width: $breakpoint1920) {
 		font-size: 24px;
 		line-height: 28px;
-		padding: 19px 65px;
+		padding: 19px 20px 18px;
+		max-width: 260px;
 	}
 }
 
 .btn-with-icon {
+	background: transparent;
 	display: inline-flex;
+	align-items: center;
+	max-width: 210px;
+	width: 100%;
 	position: relative;
-	padding: 10px 18px;
+	padding: 11px 18px;
 	cursor: pointer;
 	border-radius: 5px;
+	@media (min-width: $breakpoint768) {
+		max-width: 150px;
+	}
 	@media (min-width: $breakpoint1310) {
 		padding: 10px 28px;
+		max-width: 170px;
+	}
+	@media (min-width: $breakpoint1920) {
+		max-width: 221px;
+		padding: 16px 23px 15px;
 	}
 	&::before {
 		content: "";
@@ -214,6 +224,10 @@ body {
 				width: 25px;
 				height: 25px;
 			}
+			@media (min-width: $breakpoint1920) {
+				width: 33px;
+				height: 33px;
+			}
 		}
 	}
 
@@ -230,6 +244,10 @@ body {
 				line-height: 11px;
 				font-weight: 500;
 			}
+			@media (min-width: $breakpoint1920) {
+				font-size: 11px;
+				line-height: 13px;
+			}
 		}
 
 		span + span {
@@ -240,25 +258,20 @@ body {
 				font-size: 16px;
 				line-height: 19px;
 			}
+			@media (min-width: $breakpoint1920) {
+				font-size: 18px;
+				line-height: 21px;
+			}
 		}
 	}
 }
 
-.mr-md-auto {
-	margin-right: auto;
+.text-md-left-xl-center {
+	text-align: left;
 	@media (min-width: $breakpoint1310) {
-		margin-right: 0;
+		text-align: center;
 	}
 }
-// custom scroll effects:
-
-// .fade {
-// 	opacity: 0;
-// 	transition: opacity 1s;
-// }
-// .show {
-// 	opacity: 1;
-// }
 
 // titles effect
 .title-effect {
