--- a/src/scss/_unlimited.scss
+++ b/src/scss/_unlimited.scss
@@ -204,46 +204,6 @@
 				height: 67px;
 			}
 		}
-		// &--win {
-		// 	svg {
-		// 		width: 50px;
-		// 		height: 50px;
-		// 		@media (min-width: $breakpoint1920) {
-		// 			width: 67px;
-		// 			height: 67px;
-		// 		}
-		// 	}
-		// }
-		// &--apple {
-		// 	svg {
-		// 		width: 42px;
-		// 		height: 50px;
-		// 		@media (min-width: $breakpoint1920) {
-		// 			width: 57px;
-		// 			height: 68px;
-		// 		}
-		// 	}
-		// }
-		// &--linux {
-		// 	svg {
-		// 		width: 48px;
-		// 		height: 50px;
-		// 		@media (min-width: $breakpoint1920) {
-		// 			width: 66px;
-		// 			height: 68px;
-		// 		}
-		// 	}
-		// }
-		// &--android {
-		// 	svg {
-		// 		width: 42px;
-		// 		height: 50px;
-		// 		@media (min-width: $breakpoint1920) {
-		// 			width: 58px;
-		// 			height: 68px;
-		// 		}
-		// 	}
-		// }
 	}
 
 	&__footer-item-txt {
@@ -462,7 +422,7 @@
 	color:#fff;
 }
 
-//tabs 2,3,4
+//! tabs 2,3,4 
 
 .devices {
 
@@ -472,6 +432,9 @@
 				max-width: 550px;
 				margin: 0 auto;
 				padding: 0;
+			}
+			@media (min-width: $breakpoint1920)  {
+				max-width: 725px;
 			}
 		}
 
@@ -491,6 +454,10 @@
 				flex-direction: row;
 				margin-bottom: 20px;
 				max-width: 100%;
+				align-items: center;
+			}
+			@media (min-width: $breakpoint1920) {
+				margin-bottom: 30px;
 			}
 		}
 
@@ -506,6 +473,17 @@
 			@media (min-width: $breakpoint1310) {
 				margin-bottom: 0;
 				margin-right: 33px;
+			}
+			@media (min-width: $breakpoint1920)  {
+				max-width: 293px;
+				width: 100%;
+				margin-right: 58px;
+			}
+			&--tv {
+				@media (min-width: $breakpoint1920)  {
+					max-width: 238px;
+					margin-right: 105px;
+				}
 			}
 			img {
 				width: 100%;
@@ -525,6 +503,10 @@
 			line-height: 20px;
 			display: flex;
 			align-items: center;
+			@media (min-width: $breakpoint1920) {
+				font-size: 18px;
+				line-height: 28px;
+			}
 		}
 
 		&__links {
@@ -546,6 +528,7 @@
 
 		&__item {
 			margin-bottom: 6px;
+			width: 100%;
 			@media (min-width: $breakpoint768) {
 				margin-bottom: 0;
 			}
@@ -558,24 +541,16 @@
 				width: 100%;
 				margin-right: 0;
 			}
-			a, p {
-				display: block;
-				text-align: center;
-				font-size: 12px;
-				font-weight: 700;
-				color: $white-color;
-			}
 		}
 
 		&__item-link {
-			width: 100%;
-			@media (min-width: $breakpoint768) {
-				width: auto;
-			}
 			.icon-apple svg {
 				width: 13px;
 				@media (min-width: $breakpoint768) {
 					width: 23px;
+				}
+				@media (min-width: $breakpoint1920) {
+					width: 28px;
 				}
 			}
 			.icon-android svg {
@@ -583,19 +558,32 @@
 				@media (min-width: $breakpoint768) {
 					width: 22px;
 				}
+				@media (min-width: $breakpoint1920) {
+					width: 28px;
+				}
 			}
 			&--custom-link {
 				padding: 20px 44px;
+				font-size: 12px;
 				line-height: 20px;
+				display: block;
+				text-align: center;
+				font-weight: 700;
 				&::before {
 					opacity: 0.4;
 				}
 				@media (min-width: $breakpoint768) {
-					padding: 10px 18px;
+					padding: 10px 37px;
 					line-height: 18px;
+					max-width: 100%;
 				}
 				@media (min-width: $breakpoint1310) {
-					padding: 10px 28px;
+					font-size: 16px;
+					padding: 16px 28px;
+				}
+				@media (min-width: $breakpoint1920) {
+					font-size: 18px;
+					padding: 24px 28px 23px;
 				}
 			}
 		}
