--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -69,9 +69,21 @@ body {
 		height: 1000px;
 		border-radius: 50%;
 		animation: pulsation 4s ease-out infinite;
-		@media (min-width: $breakpoint768) {
+		@media (min-width: 425px) {
+			right: -97vw;
+		}
+		@media (min-width: 520px) {
+			right: -37vw;
 			bottom: -85vw;
+		}
+		@media (min-width: $breakpoint768) {
 			right: -35vw;
+		}
+		@media (min-width: 992px) {
+			width: 3272px;
+			height: 2000px;
+			right: -120vw;
+			bottom: -108vh;
 		}
 		@media (min-width: $breakpoint1310) {
 			// width: 1755px;
@@ -189,12 +201,12 @@ body {
 		max-width: 150px;
 	}
 	@media (min-width: $breakpoint1310) {
-		padding: 10px 28px;
+		padding: 10px 10px 10px 28px;
 		max-width: 170px;
 	}
 	@media (min-width: $breakpoint1920) {
 		max-width: 221px;
-		padding: 16px 23px 15px;
+		padding: 16px 10px 15px 23px;
 	}
 	&::before {
 		content: "";
