--- a/src/scss/secondPages/_download.scss
+++ b/src/scss/secondPages/_download.scss
@@ -1,29 +1,86 @@
 .download {
 	color: $white-color;
-	padding-top: 163px;
-	padding-bottom: 100px;
+	padding-top: 38px;
+	padding-bottom: 65px;
+	text-align: center;
+	@media (min-width: $breakpoint768) {
+		padding-top: 65px;
+		padding-bottom: 255px;
+		text-align: left;
+	}
+	@media (min-width: $breakpoint1310) {
+		padding-top: 75px;
+		padding-bottom: 110px;
+	}
+	@media (min-width: $breakpoint1920) {
+		padding-top: 163px;
+		padding-bottom: 100px;
+	}
+
 	&__head {
-		margin-bottom: 80px;
+		margin-bottom: 30px;
+		@media (min-width: $breakpoint768) {
+			margin-bottom: 40px;
+		}
+		@media (min-width: $breakpoint1310) {
+			margin-bottom: 70px;
+		}
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 80px;
+		}
 	}
 
 	&__head-title {
-		margin-bottom: 20px;
+		margin-bottom: 2px;
+		@media (min-width: $breakpoint768) {
+			margin-bottom: 5px;
+		}
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 20px;
+		}
 	}
 
 	&__head-text {
-		font-size: 24px;
-		line-height: 24px;
+		font-size: 16px;
+		line-height: 19px;
+		@media (min-width: $breakpoint1920) {
+			font-size: 24px;
+			line-height: 24px;
+		}
 	}
 
 	&__desktop {
-		display: flex;
-		margin-bottom: 80px;
+		margin-bottom: 20px;
+		@media (min-width: $breakpoint768) {
+			margin-bottom: 35px;
+		}
+		@media (min-width: $breakpoint1310) {
+			display: flex;
+		}
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 80px;
+		}
 	}
 
-	&__desktop-image {
-		max-width: 220px;
+	&__desktop-image, &__mobile-image, &__tv-image  {
+		max-width: 170px;
 		width: 100%;
-		margin-right: 30px;
+		height: 103px;
+		margin-bottom: 20px;
+		overflow: hidden;
+		margin-left: auto;
+		margin-right: auto;
+		@media (min-width: $breakpoint768) {
+			margin-left: 0;
+			margin-right: 0;
+			margin-bottom: 30px;
+		}
+		@media (min-width: $breakpoint1310) {
+			max-width: 220px;
+			height: 134px;
+			margin-right: 30px;
+			margin-bottom: 0;
+		}
 		img {
 			width: 100%;
 			height: auto;
@@ -34,53 +91,106 @@
 		width: 100%;
 	}
 
-	&__desktop-title {
+	&__desktop-title, &__mobile-title, &__tv-title {
 		font-size: 24px;
 		line-height: 24px;
 		margin-bottom: 20px;
 		font-weight: 700;
+		@media (min-width: $breakpoint768) {
+		}
 	}
 
 	&__desktop-buttons {
 		display: flex;
-		flex-wrap: wrap;
-	}
-
-	&__desktop-item {
-		max-width: 221px;
-		width: 100%;
-		margin-right: 25px;
-		&:last-child {
-			margin-right: 0;
+		flex-direction: column;
+		align-items: center;
+		@media (min-width: $breakpoint768) {
+			flex-direction: row;
+			align-items: flex-start;
+			flex-wrap: wrap;
 		}
 	}
 
-	&__desktop-link {
+	&__desktop-item {
+		max-width: 180px;
+		width: 100%;
+		margin-bottom: 20px;
+		&:last-child {
+			margin-right: 0;
+		}
+		@media (min-width: $breakpoint768) {
+			margin-right: 25px;
+		}
+		@media (min-width: $breakpoint1310) {
+			margin-bottom: 30px;
+			max-width: 221px;
+		}
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 0;
+		}
 	}
 
-	&__desktop-undertxt {
+	// &__desktop-link, &__mobile-link, &__tv-link {
+	// 	@media (min-width: $breakpoint1310) {
+	// 		max-width: 221px;
+	// 		padding: 16px 10px 15px 23px;
+	// 	}
+	// }
+
+	&__desktop-undertxt, &__mobile-undertxt, &__tv-undertxt {
 		font-size: 12px;
 		font-weight: 400;
 		line-height: 14px;
-		margin-top: 10px;
+		margin-top: 5px;
+		@media (min-width: $breakpoint1310) {
+			margin-top: 10px;
+		}
 	}
 
 	&__desktop-underlinks {
+		font-size: 12px;
+		line-height: 14px;
+		margin-top: 5px;
+		@media (min-width: $breakpoint1310) {
+			margin-top: 10px;
+		}
 	}
 
 	&__desktop-underlinks-item {
+		color: #00A3FF;
+		text-decoration: underline;
 	}
 
 	&__box {
+		@media (min-width: $breakpoint768) {
+			display: flex;
+		}
 	}
 
 	&__mobile {
+		margin-bottom: 40px;
+		@media (min-width: $breakpoint768) {
+			margin-right: 100px;
+			margin-bottom: 0;
+		}
+		@media (min-width: $breakpoint1310) {
+			display: flex;
+		}
 	}
 
-	&__mobile-image {
-	}
+	// &__mobile-image, &__tv-image {
+	// 	margin-right: 30px;
+	// 	max-width: 180px;
+	// 	@media (min-width: $breakpoint1310) {
+	// 		max-width: 220px;
+	// 	}
+	// 	img {
+	// 		width: 100%;
+	// 		height: auto;
+	// 	}
+	// }
 
-	&__mobile-box {
+	&__mobile-box, &__tv-box {
 	}
 
 	&__mobile-title {
@@ -93,6 +203,9 @@
 	}
 
 	&__tv {
+		@media (min-width: $breakpoint1310) {
+			display: flex;
+		}
 	}
 
 	&__tv-image {
@@ -109,4 +222,59 @@
 
 	&__tv-undertxt {
 	}
+
+
+
+		&__desktop-link,
+		&__mobile-link,
+		&__tv-link {
+			min-width: 180px;
+			max-width: 180px;
+			width: 100%;
+			padding: 10px 18px;
+			text-align: left;
+	
+			@media (min-width: $breakpoint1310) {
+				min-width: 221px;
+				padding: 16px 10px 15px 23px;
+			}
+	
+			.btn-with-icon__icon {
+				margin-right: 17px;
+	
+				svg {
+					width: 25px;
+					height: 25px;
+	
+					@media (min-width: $breakpoint1310) {
+						width: 33px;
+						height: 33px;
+					}
+				}
+			}
+	
+			.btn-with-icon__name {
+				span {
+					display: block;
+					font-size: 9px;
+					line-height: 11px;
+					font-weight: 500;
+
+					@media (min-width: $breakpoint1310) {
+						font-size: 11px;
+						line-height: 13px;
+					}
+				}
+	
+				span+span {
+					font-size: 14px;
+					line-height: 19px;
+	
+					@media (min-width: $breakpoint1310) {
+						font-size: 18px;
+						line-height: 21px;
+					}
+				}
+			}
+		}
 }
