--- a/src/scss/_power.scss
+++ b/src/scss/_power.scss
@@ -1,13 +1,17 @@
 .power {
-	padding-bottom: 35px;
-	padding-top: 35px;
+	padding-bottom: 40px;
+	padding-top: 40px;
 	@media (min-width: $breakpoint768) {
 		padding-bottom: 60px;
 		padding-top: 60px;
 	}
+	@media (min-width: $breakpoint1310) {
+		padding-bottom: 70px;
+		padding-top: 70px;
+	}
 	@media (min-width: $breakpoint1920) {
-		padding-bottom: 150px;
-		padding-top: 160px;
+		padding-bottom: 120px;
+		padding-top: 120px;
 	}
 	&__title {
 		// margin-bottom: 2px;
