--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -69,3 +69,26 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: inherit;
 	font-weight: inherit;
 }
+
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #d9d9d9 #120b32;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 2px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #120b32;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #d9d9d9;
+    border-radius: 0px;
+    border: 0px none #ffffff;
+  }
