--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -4,6 +4,7 @@ body {
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 18px;
+	// position: relative;
 	&.locked {
 		overflow: hidden;
 	}
@@ -14,6 +15,41 @@ body {
 	@media (min-width: 1919.98px) {
 		font-size: 24px;
 		line-height: 30px;
+	}
+}
+// ? ----- fixed lines on right -----
+.circle-lines {
+	position: absolute;
+	top: -20%;
+	right: -180%;
+	opacity: 0;
+	transition: all 1.2s ease;
+	@media (min-width: $breakpoint768) {
+		top: -10%;
+		right: -136%;
+	}
+	@media (min-width: 992px) {
+		right: -97%;
+	}
+	@media (min-width: $breakpoint1310) {
+		top: -40%;
+		right: -65%;
+	}
+	@media (min-width: $breakpoint1920) {
+		right: -70%;
+	}
+	svg {
+		// width: 1722px;
+		// height: 1722px;
+		width: var(--c-width);
+		height: var(--c-width);
+		@media (min-width: $breakpoint1310) {
+			width: var(--b-width);
+			height: var(--b-width);
+		}
+	}
+	&.active {
+		opacity: 1;
 	}
 }
 
@@ -45,12 +81,6 @@ body {
 	}
 }
 
-// background radial gradient
-// бля буду, мозгов не хватает додумать как сделать лучше, поэтому хардкод :\
-// :root {
-// 	--a-width: calc(90% + 320px);
-// 	--a-heigth: calc(180% + 600px);
-// }
 .circle {
 	position: fixed;
 	z-index: -1;
@@ -191,6 +221,7 @@ body {
 	width: 100%;
 	position: relative;
 	padding: 11px 18px;
+	padding: 11px 5px 11px 18px;
 	cursor: pointer;
 	border-radius: 5px;
 	@media (min-width: $breakpoint768) {
