--- a/src/scss/_plan.scss
+++ b/src/scss/_plan.scss
@@ -113,7 +113,7 @@
 			margin-top: 105px;
 		}
 		@media (min-width: $breakpoint1310) {
-			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.1) 100%);
+			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.1) 48.78%, rgba(255, 255, 255, 0) 100%);
 			position: absolute;
 			top: 0;
 			left: 0;
