--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,8 @@
 @import "vars";
 @import "locomotive";
 @import "global";
+@import "bottomBanners";
+@import 'cookie';
 @import "header";
 @import "platform";
 @import "power";
