--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -192,7 +192,9 @@ body {
 }
 
 .basic-button {
-	background: linear-gradient(90deg, #F5263C 0%, #6A129F 100%);
+	// background: linear-gradient(90deg, #F5263C 0%, #6A129F 100%);
+	background: transparent;
+	position: relative;
 	width: 100%;
 	text-align: center;
 	border-radius: 5px;
@@ -205,11 +207,65 @@ body {
 	max-width: 190px;
 	cursor: pointer;
 	text-transform: uppercase;
+	&::before, &::after {
+		content: '';
+		position: absolute;
+		border-radius: 5px;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		z-index: -1;
+		transition: all .3s ease;
+		background: linear-gradient(90deg, #F5263C 0%, #6A129F 100%);
+	}
+	&::after {
+		opacity: 0;
+		background: linear-gradient(-90deg, #F5263C 0%, #6A129F 100%);
+	}
+	&:hover::after {
+		opacity: 1;
+	}
 	@media (min-width: $breakpoint1920) {
 		font-size: 24px;
 		line-height: 28px;
 		padding: 19px 20px 18px;
 		max-width: 260px;
+	}
+}
+
+.second-btn {
+	position: relative;
+	color: $white-color;
+	font-family: Amiko;
+	font-weight: 700;
+	border-radius: 5px;
+	font-size: 14px;
+	line-height: 19px;
+	cursor: pointer;
+	display: block;
+	padding: 11px 28px 10px 28px;
+	&::before, &::after {
+		content: '';
+		position: absolute;
+		border-radius: 5px;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		z-index: -1;
+		transition: all .3s ease;
+		background: linear-gradient(90deg, rgba(32, 149, 217, 1) 0%, rgba(92, 53, 238, 1) 100%);
+	}
+	&::after {
+		opacity: 0;
+		background: linear-gradient(-90deg, rgba(32, 149, 217, 1) 0%, rgba(92, 53, 238, 1) 100%);
+	}
+	&:hover::after {
+		opacity: 1;
+	}
+	@media (min-width: $breakpoint1920) {
+		font-family: Roboto;
 	}
 }
 
