--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -60,6 +60,11 @@
 		&__item-link {
 			color: $white-color;
 			text-transform: uppercase;
+			transition: all .4s ease;
+
+			&:hover {
+				color: #00A3FF;
+			}
 	
 			&--md {
 				display: none;
@@ -94,6 +99,10 @@
 		color: $white-color;
 		font-weight: 700;
 		font-size: 14px;
+		transition: all .4s ease;
+		&:hover {
+			background: rgba(255, 255, 255, 0.05);
+		}
 		@media (min-width: $breakpoint768) {
 			display: flex;
 		}
@@ -103,20 +112,7 @@
 	}
 
 	&__buttons-login {
-		color: $white-color;
-		font-family: Amiko;
-		font-weight: 700;
-		background: linear-gradient(90deg, rgba(32, 149, 217, 1) 0%, rgba(92, 53, 238, 1) 100%);
-		border-radius: 5px;
-		font-size: 14px;
-		line-height: 19px;
-		cursor: pointer;
-		display: block;
-		padding: 11px 28px 10px 28px;
 		margin-left: 20px;
-		@media (min-width: $breakpoint1920) {
-			font-family: Roboto;
-		}
 	}
 }
 
@@ -137,8 +133,8 @@
 
 	&.show {
 		height: 100%;
-		background: #23272F;
-		background: linear-gradient(180deg, rgba(35, 39, 47, 1) 70%, rgba(0, 0, 0, .5) 70%);
+		background: #151923;
+		background: linear-gradient(180deg, rgba(21, 25, 35, 1) 70%, rgba(0, 0, 0, .5) 70%);
 		backdrop-filter: blur(20px);
 
 		// for burger munu <= 768
