--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -17,6 +17,64 @@ body {
 		line-height: 30px;
 	}
 }
+
+//! Loaded Content if need
+.mask {
+	width: 100%;
+	height: 100%;
+	background: $backgroundPrimary;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 150;
+	transition: .6s ease;
+	overflow: hidden;
+	&.hide {
+		opacity: 0;
+	}
+	&__loader {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 4px;
+		background: transparent;
+		&::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 0;
+			height: 4px;
+			background: linear-gradient(-90deg, rgba(159, 18, 136, 1) 0%, rgba(33, 1, 156, 1) 62.81%, rgba(18, 11, 50, 1) 100%);
+			animation: loaded 2s linear infinite;
+		}
+	}
+}
+
+@keyframes loaded {
+	0% {
+    left:0%;
+    right:100%;
+    width:0%;
+  }
+  10% {
+    left:0%;
+    right:75%;
+    width:25%;
+  }
+  90% {
+    right:0%;
+    left:75%;
+    width:25%;
+  }
+  100% {
+    left:100%;
+    right:0%;
+    width:0%;
+  }
+}
+
 // ? ----- fixed lines on right -----
 .circle-lines {
 	position: absolute;
@@ -376,29 +434,23 @@ body {
 	// transition: all .8s;
 }
 .title-effect-off {
-	// opacity: 1;
-	// visibility: inherit;
-	// transform: translate(0px, 0px);
 		animation-duration: 0.8s;
 		animation-fill-mode: forwards;
 		animation-name: title_effect;
-		animation-timing-function: ease-in-out;
+		animation-timing-function: ease;
 }
 
 @keyframes title_effect {
 	0% {
 		opacity: 0;
-		visibility: hidden;
 	}
 	50% {
 		opacity: 0;
-		transform: translate(0px, -80%);
-		visibility: hidden;
+		transform: translateY(-80%) translateZ(0);
 	}
 	100% {
 		opacity: 1;
-		visibility: inherit;
-		transform: translate(0px, 0px);
+		transform: translateY(0);
 	}
 }
 
