--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,5 +24,6 @@
 @import "partners";
 @import "secondPages/_download";
 @import "secondPages/_faq";
+@import "secondPages/_post";
+@import "secondPages/_blog";
 @import "footer";
-
