--- a/src/scss/secondPages/_blog.scss
+++ b/src/scss/secondPages/_blog.scss
@@ -2,10 +2,17 @@
 .blog {
 	font-family: Montserrat;
 	font-weight: 400;
-	padding-top: 90px;
-	padding-bottom: 90px;
+	padding-top: 60px;
+	padding-bottom: 60px;
+	@media (min-width: $breakpoint1920) {
+		padding-top: 90px;
+		padding-bottom: 90px;
+	}
 	&__inner {
-		margin-bottom: 20px;
+		margin-bottom: 30px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 20px;
+		}
 	}
 
 	&__breadcrumbs {
@@ -14,15 +21,23 @@
 
 	&__breadcrumbs-item {
 		font-weight: 600;
-		font-size: 14px;
-		margin-right: 35px;
+		font-size: 12px;
+		margin-right: 25px;
 		position: relative;
 		color: #9B99AD;
+		@media (min-width: $breakpoint1920) {
+			font-size: 14px;
+			margin-right: 35px;
+		}
 		&::before {
 			content: '>';
 			position: absolute;
-			top: 1px;
-			right: -20px;
+			top: 0;
+			right: -15px;
+			@media (min-width: $breakpoint1920) {
+				top: 1px;
+				right: -20px;
+			}
 		}
 		&:last-child {
 			margin-right: 0;
@@ -40,14 +55,23 @@
 
 	&__box {
 		display: grid;
-		grid-template-columns: 75% 1fr;
-		gap: 40px;
-		margin-bottom: 100px;
+		grid-template-columns: 72% 1fr;
+		gap: 100px;
+		margin-bottom: 40px;
+		@media (min-width: $breakpoint1920) {
+			grid-template-columns: 76% 1fr;
+			margin-bottom: 100px;
+			gap: 140px;
+		}
 	}
 
 	&__posts {
-		column-gap: 80px;
+		column-gap: 50px;
 		row-gap: 50px;
+		@media (min-width: $breakpoint1920) {
+			column-gap: 80px;
+			row-gap: 50px;
+		}
 	}
 
 	&__post {
@@ -58,17 +82,22 @@
 	}
 
 	&__categories {
-		padding-left: 60px;
 		color: $white-color;
 	}
 
 	&__categories-title {
 		font-weight: 700;
-		font-size: 36px;
-		line-height: 44px;
-		max-width: 300px;
-		padding-bottom: 30px;
+		font-size: 24px;
+		line-height: 29px;
+		max-width: 210px;
+		padding-bottom: 20px;
 		position: relative;
+		@media (min-width: $breakpoint1920) {
+			font-size: 36px;
+			line-height: 44px;
+			min-width: 300px;
+			padding-bottom: 30px;
+		}
 		&::before {
 			content: '';
 			position: absolute;
@@ -81,19 +110,28 @@
 	}
 
 	&__categories-list {
-		margin-top: 30px;
+		margin-top: 20px;
+		@media (min-width: $breakpoint1920) {
+			margin-top: 30px;
+		}
 	}
 
 	&__categories-item {
-		margin-bottom: 30px;
+		margin-bottom: 20px;
+		@media (min-width: $breakpoint1920) {
+			margin-bottom: 30px;
+		}
 	}
 
 	&__categories-link {
 		color: $white-color;
 		background: transparent;
-		font-size: 27px;
+		font-size: 18px;
 		border: 0;
 		text-align: left;
+		@media (min-width: $breakpoint1920) {
+			font-size: 27px;
+		}
 	}
 
 	&__pagination {
