--- a/src/scss/secondPages/_blog.scss
+++ b/src/scss/secondPages/_blog.scss
@@ -2,8 +2,12 @@
 .blog {
 	font-family: Montserrat;
 	font-weight: 400;
-	padding-top: 60px;
-	padding-bottom: 60px;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	@media (min-width: $breakpoint1310) {
+		padding-top: 60px;
+		padding-bottom: 60px;
+	}
 	@media (min-width: $breakpoint1920) {
 		padding-top: 90px;
 		padding-bottom: 90px;
@@ -55,9 +59,13 @@
 
 	&__box {
 		display: grid;
-		grid-template-columns: 72% 1fr;
-		gap: 100px;
+		grid-template-columns: 70% 1fr;
+		gap: 60px;
 		margin-bottom: 40px;
+		@media (min-width: $breakpoint1310) {
+			grid-template-columns: 72% 1fr;
+			gap: 100px;
+		}
 		@media (min-width: $breakpoint1920) {
 			grid-template-columns: 76% 1fr;
 			margin-bottom: 100px;
@@ -66,8 +74,12 @@
 	}
 
 	&__posts {
-		column-gap: 50px;
-		row-gap: 50px;
+		column-gap: 40px;
+		row-gap: 30px;
+		@media (min-width: $breakpoint1310) {
+			column-gap: 50px;
+			row-gap: 50px;
+		}
 		@media (min-width: $breakpoint1920) {
 			column-gap: 80px;
 			row-gap: 50px;
@@ -87,11 +99,17 @@
 
 	&__categories-title {
 		font-weight: 700;
-		font-size: 24px;
-		line-height: 29px;
-		max-width: 210px;
-		padding-bottom: 20px;
+		font-size: 14px;
+		line-height: 17px;
+		max-width: 130px;
+		padding-bottom: 10px;
 		position: relative;
+		@media (min-width: $breakpoint1310) {
+			font-size: 24px;
+			line-height: 29px;
+			max-width: 210px;
+			margin-bottom: 20px;
+		}
 		@media (min-width: $breakpoint1920) {
 			font-size: 36px;
 			line-height: 44px;
@@ -110,14 +128,22 @@
 	}
 
 	&__categories-list {
-		margin-top: 20px;
+		margin-top: 10px;
+		line-height: 14px;
+		@media (min-width: $breakpoint1310) {
+			margin-top: 20px;
+			line-height: 24px;
+		}
 		@media (min-width: $breakpoint1920) {
 			margin-top: 30px;
 		}
 	}
 
 	&__categories-item {
-		margin-bottom: 20px;
+		margin-bottom: 15px;
+		@media (min-width: $breakpoint1310) {
+			margin-bottom: 20px;
+		}
 		@media (min-width: $breakpoint1920) {
 			margin-bottom: 30px;
 		}
@@ -126,9 +152,12 @@
 	&__categories-link {
 		color: $white-color;
 		background: transparent;
-		font-size: 18px;
+		font-size: 12px;
 		border: 0;
 		text-align: left;
+		@media (min-width: $breakpoint1310) {
+			font-size: 18px;
+		}
 		@media (min-width: $breakpoint1920) {
 			font-size: 27px;
 		}
@@ -143,45 +172,68 @@
 
 	&__list {
 		display: flex;
-		font-size: 24px;
-		line-height: 30px;
+		align-items: center;
+		font-size: 14px;
+		line-height: 17px;
 		font-weight: 600;
+		@media (min-width: $breakpoint1310) {
+			font-size: 24px;
+			line-height: 30px;
+		}
 	}
 
 	&__item {
 		margin-right: 15px;
 		&:first-child a, &:last-child a {
 			display: block;
-			width: 30px;
-			height: 30px;
+			width: 20px;
+			height: 20px;
 			background: linear-gradient(90deg, #2095D9 0%, #5C35EE 100%);
 			position: relative;
 			border: 1px solid transparent;
 			border-radius: 2px;
+			@media (min-width: $breakpoint1310) {
+				width: 30px;
+				height: 30px;
+			}
 			&::before {
 				content: '';
 				position: absolute;
-				top: 8px;
-				left: 10px;
+				top: 5px;
+				left: 6px;
 				transform: rotate(45deg);
-				width: 12px;
-				height: 12px;
+				width: 8px;
+				height: 8px;
 				border-bottom: 2px solid $white-color;
 				border-left: 2px solid $white-color;
+				@media (min-width: $breakpoint1310) {
+					top: 8px;
+					left: 10px;
+					width: 12px;
+					height: 12px;
+				}
 			}
 		}
 		&:last-child a {
 			&::before {
 				transform: rotate(-135deg);
-				left: 5px;
+				left: 4px;
+				@media (min-width: $breakpoint1310) {
+					left: 5px;
+				}
 			}
 		}
 		&:first-child {
-			margin-right: 30px;
+			margin-right: 15px;
+			@media (min-width: $breakpoint1310) {
+				margin-right: 30px;
+			}
 		}
 		&:last-child {
 			margin-right: 0;
-			margin-left: 30px;
+			@media (min-width: $breakpoint1310) {
+				margin-left: 30px;
+			}
 		}
 	}
 
