adding custom dropdown and add responsive 320+ mobile devices

--- a/src/scss/secondPages/_blog.scss
+++ b/src/scss/secondPages/_blog.scss
@@ -2,8 +2,17 @@
 .blog {
 	font-family: Montserrat;
 	font-weight: 400;
-	padding-top: 50px;
-	padding-bottom: 50px;
+	padding-top: 20px;
+	.container {
+		padding: 0 40px;
+	}
+	@media (min-width: $breakpoint768) {
+		padding-top: 50px;
+		padding-bottom: 50px;
+		.container {
+			padding: 0;
+		}
+	}
 	@media (min-width: $breakpoint1310) {
 		padding-top: 60px;
 		padding-bottom: 60px;
@@ -13,7 +22,10 @@
 		padding-bottom: 90px;
 	}
 	&__inner {
-		margin-bottom: 30px;
+		margin-bottom: 20px;
+		@media (min-width: $breakpoint768) {
+			margin-bottom: 30px;
+		}
 		@media (min-width: $breakpoint1920) {
 			margin-bottom: 20px;
 		}
@@ -58,10 +70,14 @@
 	}
 
 	&__box {
+		position: relative;
 		display: grid;
-		grid-template-columns: 70% 1fr;
-		gap: 60px;
-		margin-bottom: 40px;
+		@media (min-width: $breakpoint768) {
+			position: static;
+			grid-template-columns: 70% 1fr;
+			gap: 60px;
+			margin-bottom: 40px;
+		}
 		@media (min-width: $breakpoint1310) {
 			grid-template-columns: 72% 1fr;
 			gap: 100px;
@@ -76,6 +92,12 @@
 	&__posts {
 		column-gap: 40px;
 		row-gap: 30px;
+		order: 2;
+		margin-top: 50px;
+		@media (min-width: $breakpoint768) {
+			margin-top: 0;
+			order: 1;
+		}
 		@media (min-width: $breakpoint1310) {
 			column-gap: 50px;
 			row-gap: 50px;
@@ -94,76 +116,29 @@
 	}
 
 	&__categories {
-		color: $white-color;
+		order: 1;
+		@media (min-width: $breakpoint768) {
+			order: 2;
+		}
 	}
 
 	&__categories-title {
-		font-weight: 700;
-		font-size: 14px;
-		line-height: 17px;
-		max-width: 130px;
-		padding-bottom: 10px;
-		position: relative;
-		@media (min-width: $breakpoint1310) {
-			font-size: 24px;
-			line-height: 29px;
-			max-width: 210px;
-			margin-bottom: 20px;
-		}
-		@media (min-width: $breakpoint1920) {
-			font-size: 36px;
-			line-height: 44px;
-			min-width: 300px;
-			padding-bottom: 30px;
-		}
-		&::before {
-			content: '';
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			width: 100%;
-			height: 1px;
-			background: rgba($color: $white-color, $alpha: 0.2);
-		}
 	}
 
 	&__categories-list {
-		margin-top: 10px;
-		line-height: 14px;
-		@media (min-width: $breakpoint1310) {
-			margin-top: 20px;
-			line-height: 24px;
-		}
-		@media (min-width: $breakpoint1920) {
-			margin-top: 30px;
-		}
 	}
 
 	&__categories-item {
-		margin-bottom: 15px;
-		@media (min-width: $breakpoint1310) {
-			margin-bottom: 20px;
-		}
-		@media (min-width: $breakpoint1920) {
-			margin-bottom: 30px;
-		}
 	}
 
 	&__categories-link {
-		color: $white-color;
-		background: transparent;
-		font-size: 12px;
-		border: 0;
-		text-align: left;
-		@media (min-width: $breakpoint1310) {
-			font-size: 18px;
-		}
-		@media (min-width: $breakpoint1920) {
-			font-size: 27px;
-		}
 	}
 
 	&__pagination {
+		display: none;
+		@media (min-width: $breakpoint768) {
+			display: block;
+		}
 	}
 }
 
