--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,5 +25,6 @@
 @import "secondPages/_download";
 @import "secondPages/_faq";
 @import "secondPages/_post";
+@import "secondPages/_dropdown";
 @import "secondPages/_blog";
 @import "footer";
