--- a/src/scss/secondPages/_post.scss
+++ b/src/scss/secondPages/_post.scss
@@ -1,21 +1,35 @@
 .posts {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	@media (min-width: $breakpoint768) {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+	}
 }
 .post {
 	color: $white-color;
 	display: flex;
 	flex-direction: column;
+	margin-bottom: 30px;
+	&:last-child {
+		margin-bottom: 0;
+	}
+	@media (min-width: $breakpoint768) {
+		margin-bottom: 0;
+	}
 	// background-color: #2095D9;
 
 	&__image {
 		display: block;
 		color: $white-color;
-		min-height: 80px;
+		min-height: 150px;
 		max-width: 100%;
 		border-radius: 10px;
 		overflow: hidden;
-		margin-bottom: 2px;
+		margin-bottom: 15px;
+		flex-basis: 0;
+		@media (min-width: $breakpoint768) {
+			margin-bottom: 2px;
+			min-height: 80px;
+		}
 		@media (min-width: $breakpoint1310) {
 			min-height: 145px;
 			margin-bottom: 15px;
@@ -24,6 +38,7 @@
 			min-height: 205px;
 		}
 		img {
+			object-fit: cover;
 			width: 100%;
 			height: 100%;
 		}
@@ -31,7 +46,9 @@
 	&__box {
 		display: flex;
 		flex-direction: column;
-		height: 100%;
+		@media (min-width: $breakpoint768) {
+			height: 100%;
+		}
 	}
 	&__tag {
 		margin-bottom: 10px;
@@ -41,9 +58,14 @@
 	}
 	&__tag-category {
 		font-weight: 700;
-		font-size: 8px;
+		font-size: 12px;
 		padding: 2px 5px;
-		line-height: 10px;
+		line-height: 15px;
+		@media (min-width: $breakpoint768) {
+			font-size: 8px;
+			line-height: 10px;
+			padding: 2px 5px;
+		}
 		@media (min-width: $breakpoint1310) {
 			font-size: 12px;
 			line-height: 20px;
@@ -60,8 +82,12 @@
 	}
 	&__title, &__subtitle {
 		color: inherit;
-		font-size: 11px;
-		line-height: 14px;
+		font-size: 14px;
+		line-height: 18px;
+		@media (min-width: $breakpoint768) {
+			font-size: 11px;
+			line-height: 14px;
+		}
 		@media (min-width: $breakpoint1310) {
 			font-size: 14px;
 			line-height: 18px;
